# tauri-plugin-macos-permissions

./: .release-it.ts  CLAUDE.md  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  project.md
.vibedev/specs/photokit-permissions/: api-spec.md  architecture.md  project-brief.md  requirements.md  tasks.md  tech-stack.md  test-plan.md  user-stories.md
agents/: refactor-agent.md  senior-backend-architect.md  senior-frontend-architect.md  spec-analyst.md  spec-architect.md  spec-developer.md  spec-orchestrator.md  spec-performance-optimizer.md  spec-planner.md  spec-reviewer.md  spec-security-scanner.md  spec-tester.md  spec-validator.md  ui-ux-master.md
docs/: photokit-permissions-task-001-completion-report.md  photokit-permissions-task-007-completion-report.md
docs/completion-reports/: PHASE-2-completion.md  README-update.md  TASK-002-completion.md  TASK-003-completion.md  TASK-004-completion.md  TASK-005-completion.md  TASK-006-completion.md  photokit-api-documentation.md
docs/quick-fixes/: command-acl-error.md
docs/troubleshooting/: acl-command-not-allowed.md
examples/: ref.md
examples/tauri-app/: package.json  pnpm-lock.yaml  vite.config.ts
examples/tauri-app/src/: App.tsx  main.tsx
examples/tauri-app/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: check_accessibility_permission.toml  check_camera_permission.toml  check_full_disk_access_permission.toml  check_full_disk_access_permissions.toml  check_input_monitoring_permission.toml  check_microphone_permission.toml  check_photokit_permission.toml  check_screen_recording_permission.toml  get_photokit_permission_listeners.toml  get_photos_count.toml  register_photokit_permission_listener.toml  request_accessibility_permission.toml  request_full_disk_access_permission.toml  request_input_monitoring_permission.toml  request_microphone_permission.toml  request_photokit_permission.toml  request_screen_recording_permission.toml  unregister_photokit_permission_listener.toml
permissions/schemas/: schema.json
src/: commands.rs  lib.rs  photokit_bridge.rs  photokit_listener.rs  photokit_manager.rs
