[package]
name = "tauri-plugin-macos-permissions-with-photokit"
version = "2.3.1"
authors = ["ayangweb", "rais"]
description = "Support for checking and requesting macos system permissions."
repository = "https://github.com/raiscui/tauri-plugin-macos-permissions"
keywords = [
    "tauri-plugin",
    "macos-permissions",
    "accessibility",
    "full-disk-access",
    "screen-recording",
]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-macos-permissions"

[dependencies]
tauri = { version = "2" }
serde = "1"
thiserror = "2"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[target."cfg(target_os = \"macos\")".dependencies]
macos-accessibility-client = "0.0.1"
objc2 = "0.6"
objc2-foundation = "0.3"
